@@ -1,5 +1,8 @@
 2005-02-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* md4.tcl:      Fixed the tests to use both critcl and pure-Tcl
+	* md4.test:     if the critcl version is available.
+	
 	* md4.tcl:      Made hashing cope with data that begins with a 
 	* md4.test:     hyphen and made the '--' end-of-options marker
 	* md4.man:      optional. Incremented version.
